public/css/calendar.css
.calendar {
  user-select: none;
  width: 100%;
}

/* .cal-container {
  margin-left: 220px;
} */

table {
  border-collapse: collapse;
  width: 90%;
}

td,
th {
  width: 20vh;
  height: 2.5vh;
  text-align: center;
}

td {
  border: 1px solid black;
  text-align: center;
  color: white;
}

.times {
  width: 5vh;
}

#confirmedContainer,
#confirmedInterviews {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

#confirmedInterviews .timeDiv {
  flex-direction: column;
  gap: 0;
}

#confirmedInterviews .timeDiv > p:nth-of-type(3) {
  display: flex;
  gap: 1em;
}

.cal {
  display: flex;
  flex-direction: column;
}

table:hover {
  cursor: grab;
}

.selected {
  background-color: orange;
}

.selection,
.confirmedCont,
.confirmedInt {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1em;
}

.sortedEntry,
.confirmedAvail {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0em;
}

.titleDate {
  display: flex;
  gap: 0.5em;
  border-bottom: 1px solid black;
}

.titleDate > p,
.timeDiv > p {
  padding-bottom: 0;
  margin: 0;
}

.timeDiv {
  display: flex;
  align-items: center;
  gap: 1em;
  /* padding-bottom: 0;
  margin-bottom: 0; */
}

#bottomButtons {
  display: flex;
  flex-direction: row;
}

#avail button {
  height: 2em;
  background-color: orange;
  color: white;
}

.confirmed {
  background-color: green;
}

.interview {
  background-color: #28225d;
}

.cal-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.bottom {
  display: flex;
  justify-content: space-around;
  width: 100%;
}

.bottom > div {
  text-align: center;
}

#confirmChoices,
#confirmedContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

